# ai-fitness-coach

./: .dockerignore  .env.example  .gitignore  .railwaywatch  CI_CD_SETUP_SUMMARY.md  Dockerfile  Makefile  RAILWAY_DEPLOYMENT_SETUP.md  README.md  docker-compose.yml  guidelines.md  netlify.toml  package.json  requirements-light.txt  requirements.txt
.cursor/rules/: project.mdc
.github/: ACTIONS_README.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dev-tests.yml
backend/: .envrc  Dockerfile  __main__.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup_venv.sh
backend/ai_fitness_coach_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/endpoints/: chat.py
backend/app/core/: config.py  model_config.py
backend/app/models/: chat.py
backend/app/services/: gemini_client.py  openrouter_client.py  profile_logic.py  rag_index.py  rag_service.py
backend/tests/: conftest.py  test_api_endpoints.py  test_chat_flow.py  test_error_handling.py  test_hybrid_rag.py  test_intents.py  test_profile_logic.py  test_rag_index.py  test_short_queries.py  test_tdee.py
frontend/: .env.example  Dockerfile  ENVIRONMENT_SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: _redirects  manifest.json  sw.js
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/components/: BackendTest.vue  ChatInterface.vue  HypertrofitLogo.vue
knowledge_base/: 01_training_frequency.md  02_training_intensity  02_training_intensity.md  03_optimal_nutrition.md  03_optimal_nutriton.md  04_strength_training_basics.md  05_cardio_fundamentals.md  06_recovery_rest.md  07_goal_setting_motivation.md  08_faq.md
