[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-fitness-coach-backend"
version = "0.1.0"
description = "AI Fitness Coach Backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.25.0",
    "transformers>=4.40.0",
    "sentence-transformers==2.7.0",
    # faiss-cpu removed; using pure NumPy similarity fallback
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.10",
    "pydantic-settings>=2.0.0",
    "google-generativeai>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "isort", "mypy", "pre-commit"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
# Updated test path to include backend/app/tests
testpaths = ["backend/tests", "tests", "../tests", "backend/app/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.pyright]
include = ["backend/app"]
exclude = ["**/node_modules", "**/__pycache__", "**/venv", "**/.venv"]
venvPath = "backend"
venv = ".venv"
pythonVersion = "3.11"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
